Add horaire chaloupe

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -1204,6 +1204,8 @@ nlu:
     - Le prix du billet Dakar-Gorée
     - Quel est le prix du ticket Dakar-Gorée
     - LMDG
+    - horaire de la chaloupe
+    - heure de depart de la chaloupe
     - Coumba Castel
     - Beer
     - Coumba Lamb
