--- a/data/rules.yml
+++ b/data/rules.yml
@@ -301,6 +301,7 @@ rules:
   steps:
   - intent: qualite_service
   - action: utter_qualite_service
+  - action: utter_qualite_service_1
 - rule: L'avitaillement en eau et en hydrocabure au Port de Dakar
   steps:
   - intent: avitaillement_eau_hydro
